--- a/res/css/rowodo.css
+++ b/res/css/rowodo.css
@@ -14,6 +14,11 @@ Botnet Dev
     --smartgreen : #2AD5BA;
     --link-color: #104977;
 
+    --golden-yellow-2: #E9B01Eff;
+    --pale-yellow: #E3D876ff;
+    --forest-green: #159228ff;
+    --pale-green: #5AB466ff;
+
 }
 /*
     
