--- a/res/css/rowodo.css
+++ b/res/css/rowodo.css
@@ -167,7 +167,7 @@ footer h5 {
 #copy-left {
     background-color: var(--forest-green);
     font-weight: 400;
-    color: var(--golden-yellow-2);
+    color: var(--pale-yellow);
     padding-top: .5rem;
     padding-bottom: .5rem;
 }
