--- a/res/css/colors.css
+++ b/res/css/colors.css
@@ -1,4 +1,5 @@
 /* CSS HEX */
+/*
 --forest-green: #159228;
 --mantis: #5AB466;
 --xanthous: #E9B01E;
@@ -8,6 +9,7 @@
 --straw: #E3D876;
 
 /* CSS HSL */
+/*
 --forest-green: hsla(129, 75%, 33%, 1);
 --mantis: hsla(128, 38%, 53%, 1);
 --xanthous: hsla(43, 82%, 52%, 1);
@@ -17,6 +19,7 @@
 --straw: hsla(54, 66%, 68%, 1);
 
 /* SCSS HEX */
+/*
 $forest-green: #159228;
 $mantis: #5AB466;
 $xanthous: #E9B01E;
@@ -26,6 +29,7 @@ $xanthous-2: #E9B01E;
 $straw: #E3D876;
 
 /* SCSS HSL */
+/*
 $forest-green: hsla(129, 75%, 33%, 1);
 $mantis: hsla(128, 38%, 53%, 1);
 $xanthous: hsla(43, 82%, 52%, 1);
@@ -35,6 +39,7 @@ $xanthous-2: hsla(43, 82%, 52%, 1);
 $straw: hsla(54, 66%, 68%, 1);
 
 /* SCSS RGB */
+/*
 $forest-green: rgba(21, 146, 40, 1);
 $mantis: rgba(90, 180, 102, 1);
 $xanthous: rgba(233, 176, 30, 1);
@@ -44,6 +49,7 @@ $xanthous-2: rgba(233, 176, 30, 1);
 $straw: rgba(227, 216, 118, 1);
 
 /* SCSS Gradient */
+/*
 $gradient-top: linear-gradient(0deg, #159228ff, #5AB466ff, #E9B01Eff, #000000ff, #000000ff, #E9B01Eff, #E3D876ff);
 $gradient-right: linear-gradient(90deg, #159228ff, #5AB466ff, #E9B01Eff, #000000ff, #000000ff, #E9B01Eff, #E3D876ff);
 $gradient-bottom: linear-gradient(180deg, #159228ff, #5AB466ff, #E9B01Eff, #000000ff, #000000ff, #E9B01Eff, #E3D876ff);
