--- a/res/css/rowodo.css
+++ b/res/css/rowodo.css
@@ -106,6 +106,12 @@ main {
     color: var(--forest-green);
 }
 
+.page-top-underline {
+    color: ;
+    width: 100px;
+    height: 2px;
+}
+
 .web-for {
     color: #00A3DD;
 }
