--- a/res/css/rowodo.css
+++ b/res/css/rowodo.css
@@ -118,9 +118,9 @@ main {
 
 /* images */
 
-#women-image {
+/* #women-image {
     height: 200px;
-}
+} */
 
 #all-links {
     align-content: center;
