--- a/res/css/rowodo.css
+++ b/res/css/rowodo.css
@@ -106,6 +106,10 @@ main {
     font-size: 2rem;
 }
 
+.sub-sections-header {
+    color: var(--forest-green);
+}
+
 .page-subtitle {
     color: var(--forest-green);
 }
@@ -120,7 +124,7 @@ main {
 
 #women-image {
     background-color: var(--forest-green);
-    
+    background-blend-mode: multiply;
 }
 
 #all-links {
