--- a/res/css/rowodo.css
+++ b/res/css/rowodo.css
@@ -62,6 +62,10 @@ body {
     color: var(--forest-green);
 }
 
+.nav-link > a:hover {
+    color: var(--forest-green) !important;
+}
+
 /* .top-homepage {
     
 } */
