--- a/res/css/rowodo.css
+++ b/res/css/rowodo.css
@@ -145,6 +145,11 @@ main {
     font-size: 1.5rem;
 }
 
+.value-icons {
+    color: var(--forest-green);
+    font-size: 1.5rem;
+}
+
 #all-links {
     align-content: center;
 }
